FIX: Alteração do overflow do body
O scroll do body estava desabilidato e isto impedia o usuario de ver todo o conteudo da pagina

--- a/assets/style/scss/_base.scss
+++ b/assets/style/scss/_base.scss
@@ -18,7 +18,6 @@ body {
     width: 100vw;
     height: max-content;
     min-height: 100vh;
-    overflow: hidden;
 }
 
 section {
